Fix navbar + headers on smaller screens

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,6 +31,23 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+/* resize heading */
+h1 {
+  font-size: 2.5rem;
+}
+
+/* fix navbar */
+.navbar .navbar__title {
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.breadcrumbs__link {
+  font-weight: 500;
+}
+
 /* fix the footer */
 .footer .container {
   max-width: 768px;
@@ -75,7 +92,27 @@
   max-width: 100%;
 }
 
+/* page-toc has the same color as base color */
+.table-of-contents__left-border {
+  border-left: 1px solid var(--ifm-color-primary);
+}
+
+.table-of-contents {
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+
+/* smaller screens */
 @media only screen and (max-width: 996px) {
+  /* fix the navbar */
+  .navbar .navbar__title {
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
+  /* fix the footer */
   .footer .footer__col {
     text-align: center;
     flex-basis: 80% !important;
@@ -86,16 +123,11 @@
   .footer .footer__links {
     padding: 0 20px;
   }
-}
 
-/* page-toc has the same color as base color */
-.table-of-contents__left-border {
-  border-left: 1px solid var(--ifm-color-primary);
-}
-
-.table-of-contents {
-  font-size: 0.9rem;
-  font-weight: 400;
+  /* resize heading */
+  h1 {
+    font-size: 2.2rem;
+  }
 }
 
 /* adjust overall spacing between things */
@@ -109,8 +141,9 @@
   }
 }
 
-/* reduce container width for large screens */
+/* for large screens */
 @media (min-width: 1416px) {
+  /* reduce container width */
   .main-wrapper {
     max-width: 1400px;
     width: 1400px;
@@ -121,15 +154,4 @@
     margin: 0 auto;
     max-width: 1360px;
   }
-}
-
-.navbar .navbar__title {
-  font-size: 15px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.breadcrumbs__link {
-  font-weight: 500;
 }
